[gd_scene load_steps=12 format=2]

[ext_resource path="res://components/main_ui/main_ui.gd" type="Script" id=1]
[ext_resource path="res://components/point_controller/radius_point_controller.gd" type="Script" id=2]
[ext_resource path="res://components/point_controller/point_mesh.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/point_shooter/point_shooter.gd" type="Script" id=4]
[ext_resource path="res://components/point_shooter/point_shooter_bullet.tscn" type="PackedScene" id=5]

[sub_resource type="CubeMesh" id=6]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.87451, 0.192157, 0.192157, 1 )

[sub_resource type="ProceduralSky" id=8]
sky_top_color = Color( 0, 0, 0, 1 )
sky_horizon_color = Color( 0.478431, 0.0980392, 0.552941, 1 )
ground_bottom_color = Color( 0, 0, 0, 1 )
ground_horizon_color = Color( 0, 0, 0, 1 )

[sub_resource type="Environment" id=9]
background_mode = 2
background_sky = SubResource( 8 )

[sub_resource type="PlaneMesh" id=10]

[sub_resource type="SpatialMaterial" id=11]
albedo_color = Color( 0.419608, 0.364706, 0.415686, 1 )

[node name="main" type="Spatial"]

[node name="radius_point_controller" type="Spatial" parent="."]
script = ExtResource( 2 )
pointer_mesh = ExtResource( 3 )

[node name="planet" type="MeshInstance" parent="radius_point_controller"]
transform = Transform( 0.0252733, 0, 0, 0, 0.0252733, 0, 0, 0, 0.159177, 0, 0.780011, 2.102 )
mesh = SubResource( 6 )

[node name="Timer" type="Timer" parent="radius_point_controller"]
wait_time = 0.8
autostart = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.999987, -0.00513124, 0, 0.00513124, 0.999987, 0.09, 0.795, 3.912 )
fov = 25.6
near = 0.02
far = 176.6

[node name="point_mesh" parent="." instance=ExtResource( 3 )]
material/0 = SubResource( 7 )
is_starter_point = true

[node name="main_ui" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="main_ui"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -750.0
mouse_filter = 2

[node name="HBoxContainer" type="VBoxContainer" parent="main_ui/Control"]
anchor_bottom = 1.0
margin_right = 222.0
mouse_filter = 2

[node name="Label" type="Label" parent="main_ui/Control/HBoxContainer"]
margin_right = 222.0
margin_bottom = 14.0
text = "wave count"

[node name="wave_count_edit" type="LineEdit" parent="main_ui/Control/HBoxContainer"]
margin_top = 18.0
margin_right = 222.0
margin_bottom = 42.0
placeholder_text = "Input value, Press ENTER"

[node name="Label2" type="Label" parent="main_ui/Control/HBoxContainer"]
margin_top = 46.0
margin_right = 222.0
margin_bottom = 60.0
text = "radius [ ex:  0.001)"

[node name="radius_edit" type="LineEdit" parent="main_ui/Control/HBoxContainer"]
margin_top = 64.0
margin_right = 222.0
margin_bottom = 88.0
text = "0.12"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.946779, 7.05405e-09, -0.321886, 0.0988428, 0.951686, 0.290731, 0.306334, -0.307074, 0.901035, -1.86684, 1.40344, 4.38517 )
shadow_enabled = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 3.74383, 0, 0, 0, 3.74383, 0, 0, 0, 3.74383, 0, -0.191565, -2.299 )
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="point_shooter" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.259927, 4.26668 )
script = ExtResource( 4 )
bullet = ExtResource( 5 )

[node name="muzzle" type="Position3D" parent="point_shooter"]

[node name="blast_timer" type="Timer" parent="point_shooter"]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="radius_point_controller/Timer" to="radius_point_controller" method="_on_Timer_timeout"]
[connection signal="text_changed" from="main_ui/Control/HBoxContainer/wave_count_edit" to="main_ui" method="_on_wave_count_edit_text_changed"]
[connection signal="text_entered" from="main_ui/Control/HBoxContainer/wave_count_edit" to="main_ui" method="_on_wave_count_edit_text_entered"]
[connection signal="text_changed" from="main_ui/Control/HBoxContainer/radius_edit" to="main_ui" method="_on_radius_edit_text_changed"]
[connection signal="text_entered" from="main_ui/Control/HBoxContainer/radius_edit" to="main_ui" method="_on_radius_edit_text_entered"]
[connection signal="timeout" from="point_shooter/blast_timer" to="point_shooter" method="_on_blast_timer_timeout"]
